# LeanIX

./: README.md
leanix-mvp/: README.md  pyproject.toml
leanix-mvp/app/: main.py
leanix-mvp/app/api/: dependencies.py
leanix-mvp/app/api/routes/: analysis.py  factsheets.py  health.py  query.py  suggest.py
leanix-mvp/app/clients/: leanix_graphql_client.py  llm_client.py
leanix-mvp/app/core/: config.py  logging.py  security.py
leanix-mvp/app/domain/: models.py  policies.py  schemas.py
leanix-mvp/app/prompts/: query_prompt.py
leanix-mvp/app/services/: leanix_service.py  llm_service.py  orchestration_service.py  rag_service.py
leanix-mvp/app/tests/: test_orchestration_service.py  test_policy_engine.py
